# media-sorter

./: .gitignore  README.md  pyproject.toml  text.py
scripts/: install.sh
src/media_sorter/: __init__.py  __main__.py  cli.py  config.py  core.py  doctor.py  finalize.py  i18n.py  index.py  pipeline.py  prompt_packs.py
src/media_sorter/locales/: messages.pot
src/media_sorter/locales/de/LC_MESSAGES/: messages.po
src/media_sorter/locales/es/LC_MESSAGES/: messages.po
src/media_sorter/locales/fr/LC_MESSAGES/: messages.po
src/media_sorter/locales/ja/LC_MESSAGES/: messages.po
src/media_sorter/locales/ko/LC_MESSAGES/: messages.po
src/media_sorter/locales/zh_CN/LC_MESSAGES/: messages.po
tests/: conftest.py  test_bug_fixes.py  test_cli.py  test_config.py  test_doctor.py  test_finalize.py  test_pipeline.py  test_prompt_packs.py
